# agent-sync

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/agent_sync_adapters_claude/: Cargo.toml
crates/agent_sync_adapters_claude/src/: lib.rs
crates/agent_sync_adapters_codex/: Cargo.toml
crates/agent_sync_adapters_codex/src/: lib.rs
crates/agent_sync_apply/: Cargo.toml
crates/agent_sync_apply/src/: lib.rs
crates/agent_sync_bundle/: Cargo.toml
crates/agent_sync_bundle/src/: lib.rs
crates/agent_sync_cli/: Cargo.toml
crates/agent_sync_cli/src/: main.rs
crates/agent_sync_core/: Cargo.toml
crates/agent_sync_core/src/: lib.rs
crates/agent_sync_platform/: Cargo.toml
crates/agent_sync_platform/src/: lib.rs
crates/agent_sync_scan/: Cargo.toml
crates/agent_sync_scan/src/: lib.rs
crates/agent_sync_storage/: Cargo.toml
crates/agent_sync_storage/src/: lib.rs
crates/agent_sync_transform/: Cargo.toml
crates/agent_sync_transform/src/: lib.rs
docs/: agent-sync-studio-architecture.md  market-research-20260701.md  mvp0-design.md
src/: classify.js  diff.js  doctor.js  plan.js  surfaces.js
test/: diff-plan.test.js  doctor.test.js
