[workspace]
resolver = "3"
members = [
  "crates/agent_sync_core",
  "crates/agent_sync_scan",
  "crates/agent_sync_transform",
  "crates/agent_sync_bundle",
  "crates/agent_sync_apply",
  "crates/agent_sync_platform",
  "crates/agent_sync_storage",
  "crates/agent_sync_adapters_codex",
  "crates/agent_sync_adapters_claude",
  "crates/agent_sync_cli",
  "apps/desktop/src-tauri"
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
age = "0.11.3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rusqlite = { version = "0.37", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
