[package]
name = "agent_sync_apply"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
agent_sync_bundle = { path = "../agent_sync_bundle" }
agent_sync_core = { path = "../agent_sync_core" }
agent_sync_storage = { path = "../agent_sync_storage" }
agent_sync_transform = { path = "../agent_sync_transform" }
base64.workspace = true
chrono.workspace = true
serde.workspace = true
sha2.workspace = true
uuid.workspace = true
rusqlite.workspace = true
